force-app/main/default/objects/Service_Job__c/Service_Job__c.object-meta.xml
<CustomObject>
    <description>A single unit of billable field work at a customer site. The central object of the Meridian implementation: everything the business schedules, dispatches, invoices and reports on hangs off this record.</description>
    <label>Service Job</label>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>