force-app/main/default/objects/Service_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account billed for this job. Delete is restricted so a customer with job history cannot be removed.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Jobs</relationshipLabel>
    <relationshipName>Service_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>