force-app/main/default/objects/Service_Job__c/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <description>When the technician left site.</description>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>