force-app/main/default/objects/Service_Job__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <description>When the technician actually went on site. Stamped from the mobile app, not typed.</description>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>