force-app/main/default/objects/Service_Job__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician responsible for attending. History-tracked: reassignment disputes are the most common source of 'who was meant to be there' arguments.</description>
    <label>Assigned Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Service Jobs</relationshipLabel>
    <relationshipName>Service_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>