force-app/main/default/objects/Service_Job__c/fields/Callout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Callout_Fee__c</fullName>
    <description>Flat attendance fee charged independently of parts and labour.</description>
    <label>Callout Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>