force-app/main/default/objects/Service_Job__c/fields/Compliance_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Certificate_Number__c</fullName>
    <description>Certificate of Compliance number lodged for the work. Validation in Phase 5 will require this before a certificate-bearing job can be Completed.</description>
    <label>Compliance Certificate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>