force-app/main/default/objects/Service_Job__c/fields/Customer_Signature_Captured__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signed off on site. Prerequisite for invoicing under the Phase 12 approval process.</description>
    <label>Customer Signature Captured</label>
    <type>Checkbox</type>
</CustomField>