force-app/main/default/objects/Service_Job__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What the customer said was wrong, in their words. Kept verbatim - the gap between reported problem and work performed is a useful diagnostic quality signal.</description>
    <label>Reported Problem</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>