force-app/main/default/objects/Service_Job__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>External invoice reference from the accounting system. Unique and flagged as an external ID so the finance integration can upsert against it.</description>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>