force-app/main/default/objects/Service_Job__c/fields/Job_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Job_Age_Days__c</fullName>
    <description>Days since the job was logged. Used by the ageing report to surface jobs stuck in progress.</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Age (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>