force-app/main/default/objects/Service_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Commercial nature of the visit. Warranty Return is non-billable and is reported on separately as a quality measure.</description>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Callout</fullName>
            </value>
            <value>
                <fullName>Scheduled Maintenance</fullName>
                <default>true</default>
                <label>Scheduled Maintenance</label>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Quote or Inspection</fullName>
            </value>
            <value>
                <fullName>Warranty Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>