force-app/main/default/objects/Service_Job__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <description>Number of lines. A zero here on an Invoiced job is a data-quality defect the Phase 6 cleanup reports on.</description>
    <label>Line Item Count</label>
    <summaryForeignKey>Job_Line_Item__c.Service_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>