force-app/main/default/objects/Service_Job__c/fields/On_Site_Hours__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Hours__c</fullName>
    <description>Hours actually spent on site. Blank until both timestamps exist so half-finished jobs do not skew the average-duration report.</description>
    <formula>IF(OR(ISBLANK(Actual_Start__c), ISBLANK(Actual_End__c)),
   null,
   (Actual_End__c - Actual_Start__c) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>On Site Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>