force-app/main/default/objects/Service_Job__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Sets the response-time commitment. Drives Response Due and, from Phase 9, the dispatch alerts.</description>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 Emergency</fullName>
            </value>
            <value>
                <fullName>P2 Urgent</fullName>
            </value>
            <value>
                <fullName>P3 Standard</fullName>
                <default>true</default>
                <label>P3 Standard</label>
            </value>
            <value>
                <fullName>P4 Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>