force-app/main/default/objects/Service_Job__c/fields/Requires_Compliance_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Requires_Compliance_Certificate__c</fullName>
    <description>Electrical and HVAC work carries a statutory certificate obligation in NSW. Formula, not a manual checkbox, so it cannot be unticked to dodge the Phase 5 validation rule.</description>
    <formula>OR(ISPICKVAL(Service_Type__c, "Electrical"), ISPICKVAL(Service_Type__c, "HVAC"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Compliance Certificate</label>
    <type>Checkbox</type>
</CustomField>