force-app/main/default/objects/Service_Job__c/fields/Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Response_Due__c</fullName>
    <description>Response-time commitment derived from Priority. Formula rather than a stored field so a priority change cannot leave a stale deadline behind.</description>
    <formula>CASE(TEXT(Priority__c),
  "P1 Emergency", CreatedDate + 4/24,
  "P2 Urgent",    CreatedDate + 1,
  "P3 Standard",  CreatedDate + 5,
  CreatedDate + 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Due</label>
    <type>DateTime</type>
</CustomField>