force-app/main/default/objects/Service_Job__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <description>End of the committed arrival window.</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>