force-app/main/default/objects/Service_Job__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <description>Committed arrival window start. History-tracked because reschedules are the number one customer complaint.</description>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>