force-app/main/default/objects/Service_Job__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <description>Geolocation of the site, populated on arrival from the mobile app in Phase 16. Enables distance-based dispatch reporting.</description>
    <label>Service Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>