force-app/main/default/objects/Service_Job__c/fields/Service_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Service_Postcode__c</fullName>
    <description>Four-digit Australian postcode. Text, not number - leading zeros matter outside NSW.</description>
    <label>Service Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>