force-app/main/default/objects/Service_Job__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <description>Restricted picklist rather than free text - the legacy spreadsheet held NSW, nsw, N.S.W. and New South Wales for the same state.</description>
    <label>Service State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
                <default>true</default>
                <label>NSW</label>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>