force-app/main/default/objects/Service_Job__c/fields/Service_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Street__c</fullName>
    <description>Street address of the work site. Deliberately separate from the account billing address: strata and agent customers are billed at one address and served at many.</description>
    <label>Service Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>