force-app/main/default/objects/Service_Job__c/fields/Service_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Service_Suburb__c</fullName>
    <description>Suburb of the work site. Primary grouping for the territory reports in Phase 13.</description>
    <label>Service Suburb</label>
    <length>80</length>
    <type>Text</type>
</CustomField>