force-app/main/default/objects/Service_Job__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>The trade the job falls under. Drives licence requirements and compliance certificate obligations.</description>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Multi-trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>