force-app/main/default/objects/Service_Job__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who lets the technician in and signs off the work. Often not the bill payer - strata and real-estate jobs almost never are.</description>
    <inlineHelpText>Who the technician calls on the day. Leave blank for vacant properties.</inlineHelpText>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Jobs</relationshipLabel>
    <relationshipName>Service_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>