force-app/main/default/objects/Service_Job__c/fields/Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed__c</fullName>
    <description>What the technician actually did. Becomes the body of the invoice line narrative.</description>
    <label>Work Performed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>