force-app/main/default/objects/Service_Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Scheduled_Start__c</columns>
    <columns>Service_Suburb__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>