force-app/main/default/objects/Service_Job__c/listViews/Awaiting_Invoicing.listView-meta.xml
<ListView>
    <fullName>Awaiting_Invoicing</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Actual_End__c</columns>
    <columns>Total_Job_Value__c</columns>
    <columns>Customer_Signature_Captured__c</columns>
    <columns>Compliance_Certificate_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Job__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Awaiting Invoicing</label>
</ListView>