force-app/main/default/objects/Service_Job__c/listViews/Emergency_Queue.listView-meta.xml
<ListView>
    <fullName>Emergency_Queue</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Service_Suburb__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Response_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Job__c.Priority__c</field>
        <operation>equals</operation>
        <value>P1 Emergency</value>
    </filters>
    <filters>
        <field>Service_Job__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Invoiced,Cancelled</value>
    </filters>
    <label>Emergency Queue</label>
</ListView>