force-app/main/default/objects/Service_Job__c/listViews/Open_Jobs.listView-meta.xml
<ListView>
    <fullName>Open_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Scheduled_Start__c</columns>
    <columns>Service_Suburb__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Job__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Invoiced,Cancelled</value>
    </filters>
    <label>Open Jobs</label>
</ListView>